--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ header{
   padding: 0;
   font-size: 17px;
   margin: 0;
-  margin-top: 60px;
+  margin-top: 58px;
   height: 1940px;
   margin-left: -100% ;
   transition: all 0.7s;
@@ -351,13 +351,22 @@ header{
 }
 
 .ofert .conteiner-post{
-  display: inline-flex;
   padding-top: 30px;
   text-align: center;
+  display: grid;
+  grid-template-columns: 50% 50%;
 }
 
-.ofert article{
+.ofert .item-ofert{
   padding: 20px;
+  background: #00000010;
+  border-radius: 20px;
+  width: 400px;
+  margin: 20px;
+}
+
+.ofert .item-ofert article img{
+  width: 20%;
 }
 
 .ofert article h2{
@@ -378,6 +387,12 @@ header{
   .ofert .conteiner-post{
     display: inline-block;
   }
+
+  .ofert .item-ofert{
+    width: 80%;
+    margin: 20px auto;
+  }
+
 }
 
 /*/Servicios*/
