--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Text+Me+One&display=swap');
 
 body{
   font-family: 'Raleway', sans-serif;
@@ -16,8 +17,8 @@ body hr{
   border: none;
   padding: 0;
   margin: 0 auto;
-  height: 2px;
-  background: rgb(12, 12, 12);
+  height: 1px;
+  background: rgba(0, 0, 0, 0.35);
 }
 
 /*header*/
@@ -57,9 +58,7 @@ header{
   margin-left: -100% ;
   transition: all 0.7s;
   z-index: 90;
-  border-bottom-right-radius: 20px;
-  border-bottom: 2px solid #000000;
-  border-right: 2px solid #000000;
+  border-bottom-right-radius: 15px;
 }
 
 .menu li i{
@@ -262,7 +261,13 @@ header{
 /*Sobre mi*/
 
 .biog{  
-  padding: 30px;
+  padding: 25px;
+}
+
+.biog .biog_content{
+  padding: 20px;
+  background: rgba(10, 10, 10, 0.10);
+  border-radius: 10px;
 }
 
 .biog h1{
@@ -325,7 +330,11 @@ header{
 
 
 @media screen and (max-width: 912px) {
-  
+  .biog{
+    padding: 10px;
+  }
+
+
   .biog img {
     display: block;
     width: 100%;
@@ -344,14 +353,23 @@ header{
 /*Servicios*/
 
 .ofert{
-  padding: 30px;
+  padding: 25px;
   margin: auto;
   position: relative;
+}
+
+.ofert .ofert_content{
+  padding: 25px;
+  background: rgba(10, 10, 10, 0.10);
+  border-radius: 10px;
 }
 
 .ofert h1{
   text-align: center;
   font-size: 30px;
+  font-family: 'Pacifico', cursive;
+  font-weight: 100;
+  text-shadow: 0 0 5px blue, 0 0 10px blue, 0 0 15px blue;
 }
 
 .ofert hr{
@@ -359,8 +377,10 @@ header{
   width: 90px;
   margin: 5px auto;
   height: 3px;
-  background: #082694;
+  background: #ffffff;
+  box-shadow: 0 0 5px blue, 0 0 10px blue, 0 0 15px blue;
   border: none;
+  border-radius: 20px;
 }
 
 .ofert .conteiner-post{
@@ -392,30 +412,32 @@ header{
   background: #131313;
   border-radius: 17px;
   border: 2px solid #ffffff;
-  box-shadow: inset 0 0 6px blue, 0 0 7px blue;
   font-size: 16px;
   text-align: center;
   box-sizing: content-box;
   transition: 1s;
+  animation: neon_1 5s infinite;
 }
 
-
-
-.ofert .item-ofert .img_ofert{
-  width: 17%;
-  margin: 5px;
+.ofert .item-ofert i{
+  font-size: 35px;
+  margin: 20px;
+  text-shadow: 0 0 5px blue, 0 0 10px blue;
 }
 
 .ofert h2{
-  font-size: 20px;
+  font-size: 23px;
   text-shadow: 0 0 5px blue, 0 0 10px blue, 0 0 15px blue;
   color: #f1f1f1;
+  font-family: 'Text Me One', sans-serif;
 }
 
  .ofert p{
-  padding: 15px;
+  padding: 17px;
   color: #ffffff;
-  text-shadow: 0 0 5px blue, 0 0 10px blue;
+  font-size: 18px;
+  text-shadow: 0 0 5px blue, 0 0 15px blue;
+  font-family: 'Text Me One', sans-serif;
 }
 
 .ofert .next_img i {
@@ -428,8 +450,8 @@ header{
   font-size: 70px;
   cursor: pointer;
   transition: 0.3s;
-  text-shadow:0 0 5px white ;
-  animation: neon 1.5s infinite backwards;
+  text-shadow:0 0 4px white ;
+
 }
 
 .ofert .back_img i{
@@ -442,28 +464,51 @@ header{
   font-size: 70px;
   cursor: pointer;
   transition: 0.3s;
-  text-shadow:0 0 5px white ;
-  animation: neon 1.5s infinite backwards;
+  text-shadow:0 0 4px white;
 }
 
 .ofert .next_img i:hover {
   text-shadow: 0 0 10px blue, 0 0 20px blue;
-  border-radius: 100%;
 }
 
 .ofert .back_img i:hover {
   text-shadow: 0 0 10px blue, 0 0 20px blue;
-  border-radius: 100%;
 }
 
-@keyframes neon {
-  to{
-    color: gray ;
-    text-shadow: none;
-  }
+.ofert .next_img i:active{
+  text-shadow: none;
+  color: gray;
+}
+
+.ofert .back_img i:active{
+  text-shadow: none;
+  color: gray;
+}
+
+@keyframes neon_1{
+  0%{ box-shadow: inset 0 0 8px blue, 0 0 10px blue; 
+      border: 2px solid rgb(255, 255, 255);}
+  50%{ box-shadow: inset 0 0 8px blue, 0 0 10px blue;
+      border: 2px solid rgb(255, 255, 255); }
+
+  55%{ box-shadow: inset 0 0 6px blue, 0 0 7px blue; }
+  65%{ box-shadow: inset 0 0 6px blue, 0 0 7px blue; }
+
+  80%{ box-shadow: none;
+    border: 2px solid rgba(255, 255, 255, 0.5); }
+  85%{ box-shadow: none;
+    border: 2px solid rgba(255, 255, 255, 0.75); }
+
+  90%{ box-shadow: inset 0 0 6px blue, 0 0 7px blue; }
+  100%{ box-shadow: inset 0 0 6px blue, 0 0 7px blue; }
+
 }
 
 @media screen and (max-width: 1140px){
+  .ofert{
+    padding: 10px;
+  }
+
   .ofert .conteiner-post{
     max-width: 85%;
   }
@@ -474,12 +519,21 @@ header{
 
   .ofert .item-ofert{
     width: 80%;
-    margin: 0 auto;
+    margin: 7px auto;
     padding: 5px;
+  }
+
+  .ofert .item-ofert i{
+    font-size: 30px;
   }
 
   .ofert h2{
     font-size: 17px;
+  }
+
+  .ofert p{
+    padding: 10px;
+    font-size: 15px;
   }
 
   .ofert .next_img i{
@@ -498,27 +552,27 @@ header{
 
 /*/Servicios*/
 
-/*foot*/
 
-.foot{
-  width: 100%;
-  background: rgb(17, 17, 17);
-  color: white;
+/*Contacto*/
+
+.contact{
   text-align: center;
-  border-top: 1px solid #000000;
-}
-
-.foot #foot-content{
-  background: rgb(19, 19, 19);
+  background-color: #1d1d1d;
   padding: 25px;
 }
 
-.foot #foot-content h1 {
+.contact_content{
+  padding: 20px;
+  background: rgba(10, 10, 10, 0.10);
+  border-radius: 10px;
+}
+
+.contact .contact_content h1 {
   font-size: 27px;
   color: #ffffff;
 }
 
-.foot .email_form{
+.contact .email_form{
   width: 400px;
   margin: auto;
   margin-top: 30px;
@@ -528,7 +582,7 @@ header{
   background: #ffffff;
 }
 
-.foot .email_form h4{
+.contact .email_form h4{
   background: rgb(55, 55, 55);
   text-align: left;
   border-top-left-radius: 10px;
@@ -539,7 +593,7 @@ header{
   padding: 10px;
 }
 
-.foot .email_form input, textarea{
+.contact .email_form input, textarea{
   width: 100%;
   box-sizing: border-box;
   border: none;
@@ -550,23 +604,23 @@ header{
 }
 
 
-.foot .email_form input:focus{
+.contact .email_form input:focus{
   outline: none;
 }
 
-.foot .email_form textarea:focus{
+.contact .email_form textarea:focus{
   outline: none;
 }
 
 
-.foot .email_form textarea{
+.contact .email_form textarea{
   max-width: 100%;
   min-width: 100%;
   min-height: 250px;
   max-height: 350px;
 }
 
-.foot .email_form #button_email{
+.contact .email_form #button_email{
   background-color: #4669e6;
   color: #ffffff;
   cursor: pointer;
@@ -579,14 +633,30 @@ header{
   transition: 0.5s;
 }
 
-.foot .email_form #button_email:hover{
+.contact .email_form #button_email:hover{
   background-color: #2648c4;
 }
 
 @media (max-width: 480px) {
-  .foot .email_form{
+  .contact{
+    padding: 10px;
+  }
+  
+  .contact .email_form{
     width:100%;
   }
+}
+
+/*/Contacto*/
+
+/*foot*/
+
+.foot{
+  width: 100%;
+  background: rgb(17, 17, 17);
+  color: white;
+  text-align: center;
+  border-top: 1px solid #000000;
 }
 
 .foot .foot-limit{
@@ -597,7 +667,7 @@ header{
   border: none;
 }
   
-.foot .foot-foot{
+.foot .foot-content{
   padding: 10px;
   display: grid;
   grid-template-columns: 20% 80%; 
@@ -656,7 +726,7 @@ header{
 
 @media screen and (max-width: 1024px) {
 
-.foot .foot-foot{
+.foot .foot-content{
     display: grid;
     grid-template-columns: 100%;
     gap: 20px;
